i think fixed js

--- a/please.html
+++ b/please.html
@@ -33,6 +33,6 @@
     <div class="container">
       <button id="special-button">Click me</button>
     </div>
-    <script src="plz/please2.js"></script>
+    <script src="please2.js"></script>
   </body>
 </html>
