--- a/please.html
+++ b/please.html
@@ -14,6 +14,7 @@
         height: 100vh;
         margin: 0;
       }
+
       .container {
         background-color: #fff;
         padding: 20px;
@@ -21,11 +22,11 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         text-align: center;
       }
-      h1 {
-        color: #333;
-      }
-      p {
-        color: #666;
+
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -33,6 +34,14 @@
     <div class="container">
       <button id="special-button">Click me</button>
     </div>
-    <script src="please2.js"></script>
+
+    <script>
+      function clickHooray() {
+        alert("Hooray! Now you have to spend the snow day with Brittany! 🤗");
+      }
+
+      let specialButton = document.querySelector("#special-button");
+      specialButton.addEventListener("click", clickHooray);
+    </script>
   </body>
 </html>
