--- a/please.html
+++ b/please.html
@@ -4,44 +4,173 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Please</title>
+
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
+        background: linear-gradient(135deg, #ffe0e9, #fff);
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         margin: 0;
-      }
-
-      .container {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
+        overflow: hidden;
       }
 
       button {
-        padding: 10px 20px;
-        font-size: 16px;
+        padding: 14px 28px;
+        font-size: 18px;
         cursor: pointer;
+        border: none;
+        border-radius: 8px;
+        background-color: #ff4d6d;
+        color: white;
+        transition: 0.3s ease;
+      }
+
+      button:hover {
+        background-color: #ff1e4d;
+      }
+
+      .popup {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background: white;
+        padding: 30px;
+        border-radius: 16px;
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        transition: 0.3s ease;
+        z-index: 10;
+      }
+
+      .popup.show {
+        transform: translate(-50%, -50%) scale(1);
+      }
+
+      .overlay {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.4);
+        top: 0;
+        left: 0;
+        opacity: 0;
+        pointer-events: none;
+        transition: 0.3s;
+      }
+
+      .overlay.show {
+        opacity: 1;
+        pointer-events: all;
+      }
+
+      .heart {
+        position: fixed;
+        bottom: -20px;
+        font-size: 24px;
+        animation: floatUp 4s linear forwards;
+      }
+
+      @keyframes floatUp {
+        to {
+          transform: translateY(-110vh);
+          opacity: 0;
+        }
+      }
+
+      canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        pointer-events: none;
       }
     </style>
   </head>
+
   <body>
-    <div class="container">
-      <button id="special-button">Click me</button>
+    <button id="special-button">Click me 💕</button>
+
+    <div class="overlay" id="overlay"></div>
+
+    <div class="popup" id="popup">
+      <h2>Hooray! 🎉</h2>
+      <p>Now you have to spend the snow day with Brittany! ❄️💖</p>
+      <button id="close-btn">Close</button>
     </div>
 
+    <canvas id="confetti"></canvas>
+
     <script>
-      function clickHooray() {
-        alert("Hooray! Now you have to spend the snow day with Brittany! 🤗");
+      const button = document.getElementById("special-button");
+      const popup = document.getElementById("popup");
+      const overlay = document.getElementById("overlay");
+      const closeBtn = document.getElementById("close-btn");
+      const canvas = document.getElementById("confetti");
+      const ctx = canvas.getContext("2d");
+
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+
+      let confettiPieces = [];
+
+      function createConfetti() {
+        for (let i = 0; i < 150; i++) {
+          confettiPieces.push({
+            x: Math.random() * canvas.width,
+            y: Math.random() * canvas.height - canvas.height,
+            size: Math.random() * 8 + 4,
+            speed: Math.random() * 3 + 2,
+            color: `hsl(${Math.random() * 360}, 100%, 50%)`,
+          });
+        }
       }
 
-      let specialButton = document.querySelector("#special-button");
-      specialButton.addEventListener("click", clickHooray);
+      function drawConfetti() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        confettiPieces.forEach((p) => {
+          ctx.fillStyle = p.color;
+          ctx.fillRect(p.x, p.y, p.size, p.size);
+          p.y += p.speed;
+        });
+        requestAnimationFrame(drawConfetti);
+      }
+
+      function createHearts() {
+        for (let i = 0; i < 20; i++) {
+          const heart = document.createElement("div");
+          heart.classList.add("heart");
+          heart.innerHTML = "💖";
+          heart.style.left = Math.random() * 100 + "vw";
+          heart.style.fontSize = Math.random() * 20 + 20 + "px";
+          heart.style.animationDuration = Math.random() * 2 + 3 + "s";
+          document.body.appendChild(heart);
+
+          setTimeout(() => heart.remove(), 4000);
+        }
+      }
+
+      button.addEventListener("click", () => {
+        popup.classList.add("show");
+        overlay.classList.add("show");
+        createHearts();
+        createConfetti();
+        drawConfetti();
+      });
+
+      closeBtn.addEventListener("click", () => {
+        popup.classList.remove("show");
+        overlay.classList.remove("show");
+        confettiPieces = [];
+      });
+
+      overlay.addEventListener("click", () => {
+        popup.classList.remove("show");
+        overlay.classList.remove("show");
+        confettiPieces = [];
+      });
     </script>
   </body>
 </html>
