--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </head>
 
   <body>
-    <button id="special-button">Click me, Brittany 💕</button>
+    <button id="special-button">Brittany says click me! 💕</button>
 
     <div class="popup" id="popup">
       <h2>Snow Day Magic ❄️✨</h2>
